...
        return label
    }()
    
    private lazy var usernameTextField: UITextField = {
        let textField = UITextField()
        textField.backgroundColor = UIColor.from(r: 230, g: 230, b: 230)
        textField.placeholder = "Phone number, username or email".localized
        textField.font = .systemFont(ofSize: 14)
        textField.textColor = .black
        textField.layer.cornerRadius = 8
        textField.layer.borderColor = UIColor.lightGray.cgColor
        textField.layer.sublayerTransform = CATransform3DMakeTranslation(12, 0, 0)
        textField.autocorrectionType = .no
...
        return textField
    }()
    
    private lazy var passwordTextField: UITextField = {
        let textField = UITextField()
        textField.backgroundColor = UIColor.from(r: 230, g: 230, b: 230)
        textField.placeholder = "Password"
        textField.font = .systemFont(ofSize: 14)
        textField.textColor = .black
        textField.layer.cornerRadius = 8
        textField.layer.borderColor = UIColor.lightGray.cgColor
        textField.layer.sublayerTransform = CATransform3DMakeTranslation(12, 0, 0)
        textField.isSecureTextEntry = true
...
