...
        self.disabledColor = disabledColor
        self.highlightColor = highlightColor
        self.originalBackground = backgroundColor
        self.activityIndicator = UIActivityIndicatorView(style: .white)
        super.init(frame: .zero)
        
        setTitle("Log in".localized, for: .normal)
        setTitleColor(.white, for: .normal)
        layer.cornerRadius = 8
    }
    
    required init?(coder aDecoder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
...
